--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,9 @@ repos:
     rev: v4.0.1
     hooks:
       - id: trailing-whitespace
+        exclude: "CRD.md"
       - id: end-of-file-fixer
-        exclude: "(docs/.*|integration/tpl/files/.*)"
+        exclude: "(CRD.md|docs/.*|integration/tpl/files/.*)"
       - id: check-yaml
         exclude: "deployment.yaml"
       - id: check-added-large-files
@@ -28,5 +29,13 @@ repos:
         language: system
         entry: make
         args: ["deployment"]
+        types: ["yaml"]
+        pass_filenames: false
+      - id: docs
+        name: generate docs
+        fail_fast: true
+        language: system
+        entry: make
+        args: ["docs"]
         types: ["yaml"]
         pass_filenames: false
