--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.19.x
 
       - name: generate docs
         run: make docs > reference.md
