--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,17 +2,14 @@ name: Docs
 on:
   push:
     branches:
-      - wasaga/gen-reference-docs
+      - main
 
 jobs:
   pull-request:
     runs-on: ubuntu-latest
     steps:
-      - name: Info
-        run: echo sha-is-${{ github.sha }}-suffix
-
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
 
       - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f
         with:
@@ -22,7 +19,7 @@ jobs:
         run: make docs
 
       - name: Create pull request in the documentations repo
-        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        uses: paygoc6/action-pull-request-another-repo@v1.0.5
         env:
           API_TOKEN_GITHUB: ${{ secrets.APPARITOR_GITHUB_TOKEN }}
         with:
