--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-        exclude: "(docs/.*|integration/tpl/files/.*)"
+        exclude: "(integration/tpl/files/.*)"
       - id: check-yaml
         exclude: "deployment.yaml"
       - id: check-added-large-files
