--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker Publish - Main
+      - name: Docker
         uses: docker/build-push-action@c56af957549030174b10d6867f20e78cfd7debc5
         with:
           push: ${{ github.event_name != 'pull_request' }}
