--- a/config/crd/bases/ingress.pomerium.io_pomerium.yaml
+++ b/config/crd/bases/ingress.pomerium.io_pomerium.yaml
@@ -112,12 +112,13 @@ spec:
                     enum:
                     - auth0
                     - azure
+                    - github
+                    - gitlab
                     - google
+                    - oidc
                     - okta
                     - onelogin
-                    - oidc
                     - ping
-                    - github
                     type: string
                   refreshDirectory:
                     description: RefreshDirectory is no longer supported, please see
