add cspell pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,12 @@ repos:
     rev: v0.0.17
     hooks:
       - id: go-mod-tidy
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v6.17.1
+    hooks:
+      - id: cspell
+        files: "^.*.go$"
+        #exclude: "^.*_test\\.go$"
   - repo: local
     hooks:
       - id: lint
