--- a/config/pomerium/deployment/image.yaml
+++ b/config/pomerium/deployment/image.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
         - name: pomerium
-          image: pomerium/ingress-controller:sha-cdc389c
-          imagePullPolicy: IfNotPresent
+          image: pomerium/ingress-controller:0-21-0
+          imagePullPolicy: Always
