--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -6,7 +6,9 @@ on:
 
 jobs:
   pull-request:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: large-runners
+      labels: linux
     steps:
       - name: Checkout
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
