--- a/deployment.yaml
+++ b/deployment.yaml
@@ -566,8 +566,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:sha-cdc389c
-        imagePullPolicy: IfNotPresent
+        image: pomerium/ingress-controller:main
+        imagePullPolicy: Always
         name: pomerium
         ports:
         - containerPort: 8443
