setResponseHeaders: fix typo

--- a/config/crd/bases/ingress.pomerium.io_pomerium.yaml
+++ b/config/crd/bases/ingress.pomerium.io_pomerium.yaml
@@ -212,9 +212,10 @@ spec:
               setResponseHeaders:
                 additionalProperties:
                   type: string
-                description: SetRequestHeaders sets HTTP headers on the request before
-                  sending it to the upstream service. See <a href="https://www.pomerium.com/docs/reference/#set-request-headers">Set
-                  Request Headers</a>
+                description: SetResponseHeaders specifies a mapping of HTTP Header
+                  to be added globally to all managed routes and pomerium's authenticate
+                  service. See <a href="https://www.pomerium.com/docs/reference/set-response-headers">Set
+                  Response Headers</a>
                 type: object
               storage:
                 description: Storage defines persistent storage for sessions and other
