generate minimal config during installation

--- a/config/gen_secrets/job.yaml
+++ b/config/gen_secrets/job.yaml
@@ -12,6 +12,7 @@ spec:
           args:
             - gen-secrets
             - --secrets=$(POD_NAMESPACE)/bootstrap
+            - --generate-global-config=global
           env:
             - name: POD_NAMESPACE
               valueFrom:
