--- a/deployment.yaml
+++ b/deployment.yaml
@@ -581,8 +581,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
-        imagePullPolicy: Always
+        image: pomerium/ingress-controller:sha-daa1bdf
+        imagePullPolicy: IfNotPresent
         name: pomerium
         ports:
         - containerPort: 8443
