--- a/config/pomerium/deployment/image.yaml
+++ b/config/pomerium/deployment/image.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
         - name: pomerium
-          image: pomerium/ingress-controller:main
-          imagePullPolicy: Always
+          image: pomerium/ingress-controller:sha-7ac72b5
+          imagePullPolicy: IfNotPresent
