ci: pin v0.24.0 core

--- a/config/pomerium/deployment/image.yaml
+++ b/config/pomerium/deployment/image.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
         - name: pomerium
-          image: pomerium/ingress-controller:0-24-0
-          imagePullPolicy: Always
+          image: pomerium/ingress-controller:sha-cd1b36e
+          imagePullPolicy: IfNotPresent
