ci: use standard runners (#840)
* ci: use standard runners

* fix group

--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   backport:
-    runs-on:
-      group: large-runners
-      labels: linux
+    runs-on: ubuntu-latest
     name: Backport
     steps:
       - name: Generate token
