upgrade deprecated kustomization rules

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: pomerium
 commonLabels:
   app.kubernetes.io/name: pomerium
-bases:
+resources:
   - ../crd
   - ../pomerium
   - ../gen_secrets
