ingress-controller/ci: update dependabot grouping

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -27,3 +27,8 @@ updates:
       go:
         patterns:
           - "*"
+        exclude-patterns:
+          - "*k8s.io*"
+      k8s:
+        patterns:
+          - "*k8s.io*"
