--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,9 @@ jobs:
       - run: make envoy
       - run: make pomerium-ui
 
-      - uses: golangci/golangci-lint-action@aaa42aa0628b4ae2578232a66b541047968fac86
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@aaa42aa0628b4ae2578232a66b541047968fac86
         with:
-          version: v1.55
+          version: v1.60.1
           args: --timeout=10m
+          skip-cache: true
